# do_you_npc

./: .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_SETUP.md  README.md  alembic.ini  examples_for_ui_upload.md  pyproject.toml  setup.py  test_database.py
alembic/: env.py
alembic/versions/: 288ee1b79026_initial_migration.py  d73591bf8ce5_add_campaign_model_and_update_persona_.py
do_you_npc/: __init__.py  app.py  create_vectorstore.py  llm.py  manage_content.py
do_you_npc/api/: __init__.py  dependencies.py  main.py  schemas.py
do_you_npc/api/routers/: campaigns.py  personas.py  prompts.py  tags.py
do_you_npc/db/: __init__.py  clean_example.py  crud.py  database.py  example_usage.py  external__models.py  models.py
do_you_npc/ui/: __init__.py  api_client.py  campaigns.py  home.py  personas.py  prompts.py  tags.py
do_you_npc/utils/: db.py
do_you_npc/vectorstore/: __init__.py  loader.py  manager.py  retriever.py
tests/: __init__.py  simple_test.py  test_database.py  test_gemini_integration.py  test_vectorstore_system.py
